--- a/cs_demo_landing.Rmd
+++ b/cs_demo_landing.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Posit Connect demo content at a glance"
+title: "Posit Connect Display Case"
 output: 
   html_document:
     theme:
@@ -35,6 +35,9 @@ all_content <- client %>%
   mutate(created_year = year(created_time),
          updated_year = year(updated_time))
 
+cs_demo_content <- all_content %>% 
+  by_tag("cs_demo")
+# eventually this will be by display_case
 ```
 
 Welcome to the Customer Success demo content landing page. Use this to find examples of deployed content on Connect that you can share with customers. And use this landing page to demo how helpful connectwidgets can be to point a team to the content they need to see.
@@ -44,28 +47,39 @@ Welcome to the Customer Success demo content landing page. Use this to find exam
 ### Shiny
 
 ```{r}
-all_content %>% 
-  #we need to figure out meaningful tagging or just rely on specific pieces of content and surface them individually.
-  filter(grepl("shiny", name) & !grepl("python", name), created_year >= 2021) %>% 
-  # count()
+# all_content %>% 
+#   #we need to figure out meaningful tagging or just rely on specific pieces of content and surface them individually.
+#   filter(grepl("shiny", name) & !grepl("python", name), created_year >= 2021) %>% 
+#   # count()
+#   rsc_grid()
+
+cs_demo_content %>% 
+  by_tag("r_shiny") %>% 
   rsc_grid()
 ```
 
 ### Shiny for Python
 
 ```{r}
-all_content %>% 
-  filter(grepl("shiny", name) & grepl("python", name), created_year >= 2021) %>% 
+all_content %>%
+  filter(grepl("shiny", name) & grepl("python", name), created_year >= 2021) %>%
   # count()
   rsc_grid()
+
+# cs_demo_content %>% 
+#   by_tag("python_shiny")
 ```
 
 ### Dash
 
 ```{r}
-all_content %>% 
-  by_tag("Dash") %>% 
-  filter(created_year >= 2021) %>% 
+# all_content %>% 
+#   by_tag("Dash") %>% 
+#   filter(created_year >= 2021) %>% 
+#   rsc_grid()
+
+cs_demo_content %>% 
+  by_tag("dash") %>% 
   rsc_grid()
 ```
 
